# unnamedOS

./: .gitignore  .gitmodules  README.md  build.sh  clean.sh  config.sh  default-bootmodem.sh  default-compiler.sh  default-fs.sh  default.nix  headers.sh  iso.sh  qemu.sh  todogen.sh  todolist.txt
bootloader/: Makefile
bootloader/arch/i386/: boot1.S  linker.ld  make.config
bootloader/arch/i386/generic/: boot0.S
bootloader/boot1/: main.c
isogen/: CMakeLists.txt
isogen/src/: defs.h  generator.cpp  generator.h  helper.h  main.cpp
isogen/src/byte8/: byte8.cpp  byte8.h
isogen/src/fat16/: fat16.cpp  fat16.h
isogen/src/fat32/: fat32.h
kernel/: Makefile
kernel/arch/i386/: boot.S  crtn.S  linker.ld  make.config  tty.c  vga.h
kernel/kernel/: kernel.c  ssp.c
lib/libc/: Makefile
lib/libc/include/: string.h
lib/libc/include/sys/: cdefs.h
lib/libc/stdio/: printf.c  putchar.c
lib/libc/stdlib/: abort.c
lib/libc/string/: memcmp.c  memmove.c  memset.c
